--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,8 @@
         <ul>
             <li><strong>Sightreading App</strong> - A desktop app for music sight-reading.</li>
             <li><strong>Genetic Scheduling Algorithm Research</strong> - Analyzing CPU scheduling in virtual environments.</li>
-        </ul>
+            <li><strong> Authors and Book Publisher data</strong> - A data science research about the relationship between the author and bookpublisher.</li>
+            
     </section>
 
     <section id="contact">
