--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,95 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jean Michel Mugabe - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: 'Times New Roman', Times, serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-            text-align: center;
-            color: #898383;
-        }
-        header {
-            background: linear-gradient(135deg, #4facfe, #00f2fe);
-            color: white;
-            padding: 20px 0;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-        }
-        h1, h2 {
-            margin: 10px 0;
-        }
-        section {
-            margin: 20px;
-            padding: 20px;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-            display: inline-block;
-            width: 80%;
-            transition: transform 0.3s;
-        }
-        section:hover {
-            transform: scale(1.02);
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            margin: 15px 0;
-            font-size: 18px;
-            color: #555;
-        }
-        img {
-            display: block;
-            margin: 10px auto;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s;
-        }
-        img:hover {
-            transform: scale(1.05);
-        }
-        a {
-            color: #007BFF;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        a:hover {
-            text-decoration: underline;
-            color: #ff5733;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Jean Michel Mugabe - Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: 'Times New Roman', Times, serif;
+      margin: 0;
+      padding: 0;
+      background: #131413;
+      text-align: center;
+      color: #120c0c;
+    }
+
+    header {
+      background-color: #00ff88;
+      color: #000;
+      padding: 20px 0;
+      box-shadow: 0px 4px 10px rgba(0, 255, 136, 0.3);
+      text-shadow: 0 0 8px rgba(0, 255, 136, 0.6);
+    }
+
+    h1, h2 {
+      margin: 10px 0;
+    }
+
+    section {
+      margin: 20px;
+      padding: 20px;
+      background: #e7dada;
+      border-radius: 8px;
+      box-shadow: 0px 0px 10px rgba(0, 255, 136, 0.2);
+      display: inline-block;
+      width: 80%;
+      transition: transform 0.3s;
+    }
+
+    section:hover {
+      transform: scale(1.02);
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    li {
+      margin: 15px 0;
+      font-size: 18px;
+      color: #3463e3;
+    }
+
+    img {
+      display: block;
+      margin: 10px auto;
+      border-radius: 8px;
+      box-shadow: 0px 0px 10px rgba(0, 255, 136, 0.3);
+      transition: transform 0.3s;
+    }
+
+    img:hover {
+      transform: scale(1.05);
+    }
+
+    a {
+      color: #00ffaa;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    a:hover {
+      text-decoration: underline;
+      color: #00ffcc;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Jean Michel Mugabe</h1>
-        <p>Computer Science Student | Programmer | Machine Learning Enthusiast</p>
-    </header>
-    
-   <section id="about">
+  <header>
+    <h1>Jean Michel Mugabe</h1>
+    <p>Programmer | Machine Learning Enthusiast</p>
+  </header>
+
+  <section id="about">
     <a href="about.html" style="text-decoration: none; color: inherit;">
-        <h2>About Me</h2>
-        <p>Click to learn more about my background, education, and skills.</p>
+      <h2>About Me</h2>
+      <p>Click to learn more about my background, education, and skills.</p>
     </a>
-</section>
+  </section>
 
-<section id="projects">
+  <section id="projects">
     <a href="projects.html" style="text-decoration: none; color: inherit;">
-        <h2>Projects</h2>
-        <p>Click to explore detailed descriptions and screenshots of my projects.</p>
+      <h2>Projects</h2>
+      <p>Click to explore detailed descriptions and screenshots of my projects.</p>
     </a>
-</section>
+  </section>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: michelmugabe09@gmail.com</p>
-        <p>GitHub: <a href="https://github.com/Jean2002mug" target="_blank">Jean2002mug</a></p>
-    </section>
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: michelmugabe09@gmail.com</p>
+    <p>GitHub: <a href="https://github.com/Jean2002mug" target="_blank">Jean2002mug</a></p>
+  </section>
 </body>
 </html>
