--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,17 +10,17 @@
       font-family: 'Times New Roman', Times, serif;
       margin: 0;
       padding: 0;
-      background: #131413;
+      background: #929e92;
       text-align: center;
       color: #120c0c;
     }
 
     header {
-      background-color: #00ff88;
+      background-color: #3faa78;
       color: #000;
       padding: 20px 0;
-      box-shadow: 0px 4px 10px rgba(0, 255, 136, 0.3);
-      text-shadow: 0 0 8px rgba(0, 255, 136, 0.6);
+      box-shadow: 0px 4px 10px rgba(18, 23, 21, 0.3);
+      text-shadow: 0 0 8px rgba(180, 236, 210, 0.6);
     }
 
     h1, h2 {
@@ -30,7 +30,9 @@
     section {
       margin: 20px;
       padding: 20px;
-      background: #e7dada;
+      text-emphasis-color: #090a0a;
+      text-align: center;
+      background: #d9f4d3;
       border-radius: 8px;
       box-shadow: 0px 0px 10px rgba(0, 255, 136, 0.2);
       display: inline-block;
