corrected the issue of picture not displaying and made a 'go back to main page' feature

--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -59,6 +59,8 @@
 <body>
     <header>
         <h1>About Me</h1>
+        <a href="index.html" style="color: #000; text-decoration: none;">← Back to Main page
+        </a>
     </header>
     <div class="container">
         <div class="bio-text">
@@ -70,7 +72,7 @@
             <p>I’ve collaborated in multi-disciplinary teams, contributed to open-source software, and independently developed full-stack tools and machine learning pipelines. I am now looking for opportunities where I can drive innovation, refine system workflows, and contribute to technically impactful projects.</p>
         </div>
         <div class="bio-image">
-            <img src="_MG_8823.jpg" alt="Portrait of Jean Michel Mugabe">
+            <img src="/portfolio/SelfPotrait.jpg" alt="Portrait of Jean Michel Mugabe">
         </div>
     </div>
 </body>
