--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -38,6 +38,8 @@
 <body>
     <header>
         <h1>My Projects</h1>
+        <a href="index.html" style="color: #000; text-decoration: none;">← Back to Main page
+        </a>
     </header>
 
     <div class="project">
