--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -72,7 +72,7 @@
             <p>I’ve collaborated in multi-disciplinary teams, contributed to open-source software, and independently developed full-stack tools and machine learning pipelines. I am now looking for opportunities where I can drive innovation, refine system workflows, and contribute to technically impactful projects.</p>
         </div>
         <div class="bio-image">
-            <img src="/portfolio/SelfPotrait.jpg" alt="Portrait of Jean Michel Mugabe">
+            <img src="michel.png" alt="Jean Michel Mugabe smiling, wearing a dark shirt, seated indoors with a softly lit background, conveying a friendly and approachable mood">
         </div>
     </div>
 </body>
