--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -73,7 +73,7 @@
         </div>
         <div class="bio-image">
             <hw2>Profile Picture</h2>
-            <img src="/portfolio/michel.png" alt="Jean Michel Mugabe smiling, wearing a dark shirt, seated indoors with a softly lit background, conveying a friendly and approachable mood">
+            <img src="michel.png" alt="Jean Michel Mugabe smiling, wearing a dark shirt, seated indoors with a softly lit background, conveying a friendly and approachable mood">        
         </div>
     </div>
 </body>
