--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,107 +2,263 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jean Michel Mugabe - Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+
   <style>
-    body {
-      font-family: 'Times New Roman', Times, serif;
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      background: #929e92;
-      text-align: center;
-      color: #120c0c;
     }
 
-    header {
-      background-color: #3faa78;
-      color: #000;
-      padding: 20px 0;
-      box-shadow: 0px 4px 10px rgba(18, 23, 21, 0.3);
-      text-shadow: 0 0 8px rgba(180, 236, 210, 0.6);
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: #111;
+      color: #f5f5f5;
+      min-height: 100vh;
     }
 
-    h1, h2 {
-      margin: 10px 0;
+    .page {
+      display: flex;
+      min-height: 100vh;
     }
 
-    section {
-      margin: 20px;
-      padding: 20px;
-      text-emphasis-color: #090a0a;
-      text-align: center;
-      background: #d9f4d3;
-      border-radius: 8px;
-      box-shadow: 0px 0px 10px rgba(0, 255, 136, 0.2);
-      display: inline-block;
-      width: 80%;
-      transition: transform 0.3s;
+    /* LEFT SIDE: PHOTO + CONTACT */
+    .left-panel {
+      position: relative;
+      flex: 1;
+      overflow: hidden;
+      background: #000;
     }
 
-    section:hover {
+    .portrait {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      filter: brightness(160%);
       transform: scale(1.02);
     }
 
-    ul {
-      list-style-type: none;
-      padding: 0;
+    .left-overlay {
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(135deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.1));
+      padding: 32px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
-    li {
-      margin: 15px 0;
-      font-size: 18px;
-      color: #3463e3;
+    .name-block h1 {
+      font-size: 2rem;
+      letter-spacing: 0.04em;
     }
 
-    img {
-      display: block;
-      margin: 10px auto;
-      border-radius: 8px;
-      box-shadow: 0px 0px 10px rgba(0, 255, 136, 0.3);
-      transition: transform 0.3s;
+    .name-block p {
+      margin-top: 4px;
+      font-size: 0.9rem;
+      opacity: 0.85;
     }
 
-    img:hover {
-      transform: scale(1.05);
+    .contact-card {
+      background: rgba(0, 0, 0, 0.65);
+      border-radius: 16px;
+      padding: 18px 20px;
+      max-width: 260px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
+      backdrop-filter: blur(8px);
     }
 
-    a {
-      color: #00ffaa;
+    .contact-card h2 {
+      font-size: 1.1rem;
+      margin-bottom: 8px;
+    }
+
+    .contact-item {
+      font-size: 0.9rem;
+      margin-top: 6px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      opacity: 0.9;
+    }
+
+    .contact-item span.icon {
+      font-size: 1.1rem;
+    }
+
+    .contact-card a {
+      color: #9be7ff;
       text-decoration: none;
-      font-weight: bold;
     }
 
-    a:hover {
+    .contact-card a:hover {
       text-decoration: underline;
-      color: #00ffcc;
+    }
+
+    /* RIGHT SIDE: CONTENT + OPTIONS */
+    .right-panel {
+      flex: 1.2;
+      background: #181818;
+      display: flex;
+      flex-direction: column;
+      padding: 28px 52px;
+    }
+
+    .hero {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      max-width: 560px;
+    }
+
+    .hero-kicker {
+      text-transform: uppercase;
+      letter-spacing: 0.18em;
+      font-size: 0.7rem;
+      color: #9e9e9e;
+      margin-bottom: 10px;
+    }
+
+    .hero-title {
+      font-size: clamp(2.3rem, 4vw, 3.3rem);
+      line-height: 1.05;
+      font-weight: 700;
+    }
+
+    .hero-title span {
+      display: block;
+    }
+
+    .hero-text {
+      margin-top: 18px;
+      font-size: 0.95rem;
+      color: #cfcfcf;
+      max-width: 440px;
+    }
+
+    .hero-actions {
+      margin-top: 26px;
+      display: flex;
+      gap: 16px;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .btn-primary,
+    .btn-ghost {
+      border-radius: 999px;
+      padding: 10px 22px;
+      font-size: 0.9rem;
+      border: none;
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      text-decoration: none;
+    }
+
+    .btn-primary {
+      background: #47e6ac;
+      color: #101010;
+      font-weight: 600;
+      box-shadow: 0 8px 25px rgba(71, 230, 172, 0.35);
+    }
+
+    .btn-primary:hover {
+      filter: brightness(1.05);
+    }
+
+    .btn-ghost {
+      background: transparent;
+      border: 1px solid #444;
+      color: #f5f5f5;
+    }
+
+    .btn-ghost:hover {
+      background: #262626;
+    }
+
+    .dot {
+      width: 8px;
+      height: 8px;
+      border-radius: 999px;
+      background: #47e6ac;
+    }
+
+
+    @media (max-width: 900px) {
+      .page {
+        flex-direction: column;
+      }
+
+      .left-panel {
+        height: 54vh;
+      }
+
+      .right-panel {
+        padding: 24px 22px 28px;
+      }
+
+      .options {
+        max-width: 100%;
+      }
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Jean Michel Mugabe</h1>
-    <p>Programmer | Machine Learning Enthusiast</p>
-  </header>
+  <div class="page">
+    <!-- LEFT: photo and contact -->
+    <aside class="left-panel">
+      <img src="michel.png" alt="Portrait of Jean Michel Mugabe" class="portrait" />
+      <div class="left-overlay">
+        <div class="name-block">
+          <h1>Jean Michel Mugabe</h1>
+          <p>Programmer and Machine Learning Enthusiast</p>
+        </div>
 
-  <section id="about">
-    <a href="about.html" style="text-decoration: none; color: inherit;">
-      <h2>About Me</h2>
-      <p>Click to learn more about my background, education, and skills.</p>
-    </a>
-  </section>
+        <div class="contact-card">
+          <h2>Contact</h2>
+          <div class="contact-item">
+            <span class="icon">📧</span>
+            <a href="mailto:michelmugabe09@gmail.com">michelmugabe09@gmail.com</a>
+          </div>
+          <div class="contact-item">
+            <span class="icon">💻</span>
+            <a href="https://github.com/Jean2002mug" target="_blank" rel="noopener noreferrer">
+              GitHub profile
+            </a>
+          </div>
+        </div>
+      </div>
+    </aside>
 
-  <section id="projects">
-    <a href="projects.html" style="text-decoration: none; color: inherit;">
-      <h2>Projects</h2>
-      <p>Click to explore detailed descriptions and screenshots of my projects.</p>
-    </a>
-  </section>
+    <!-- RIGHT: hero and options -->
+    <main class="right-panel">
+      <section class="hero">
+        <div class="hero-kicker">Welcome</div>
+        <h2 class="hero-title">
+          <span>My</span>
+          <span>Portfolio</span>
+        </h2>
+        <p class="hero-text">
+          Explore my background in computer science, my interest in astronomy and machine learning,
+          and a collection of projects that show how I approach real problems with code.
+        </p>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: michelmugabe09@gmail.com</p>
-    <p>GitHub: <a href="https://github.com/Jean2002mug" target="_blank">Jean2002mug</a></p>
-  </section>
+        <div class="hero-actions">
+          <a href="projects.html" class="btn-primary">
+            <span class="dot"></span>
+            <span>View projects</span>
+          </a>
+          <a href="about.html" class="btn-ghost">
+            Learn more about me
+          </a>
+        </div>
+      </section>
+    </main>
+  </div>
 </body>
 </html>
