Update relevant coursework in education section to include Artificial Intelligence

--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -323,7 +323,7 @@
             </p>
             <ul>
               <li>Minor in Astronomy</li>
-              <li>Relevant coursework: Data Structures, Algorithms, Machine Learning, Database Systems, Software Engineering</li>
+              <li>Relevant coursework: Data Structures, Algorithms, Artificial intelligence, Software Engineering</li>
             </ul>
           </div>
           <div class="edu-logo">
